--- a/praca_inz/main/templates/main/predict_page.html
+++ b/praca_inz/main/templates/main/predict_page.html
@@ -17,7 +17,7 @@
 
     <main>
         <div>
-            <img id="preview" src=" {{ MEDIA_URL }}photo_with_frame.jpg"></img>
+            <img id="preview" src=" {{ MEDIA_URL }}{{file_path}}"></img>
             <div id="button_container">
                 <button onclick="window.location.href = '/praca_inzynierska/'">Przejdź do strony</button>
                 <button id="download_button">Pobierz zdjęcie</button>
