--- a/praca_inz/main/templates/main/predict_page.html
+++ b/praca_inz/main/templates/main/predict_page.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <script type="text/javascript" src="{% static 'js/download.js' %}"></script>
     <title>Aleksandra Ciura</title>
+    <style>
+        button {
+            height: 6vh !important;
+            background-color: #202020;
+            color:  rgb(161, 161, 161);
+            border-radius: 5px;
+            display: inline-block;
+            text-align: center;
+            line-height: 6vh;
+            align-items: flex-start;
+            cursor: pointer;
+            box-sizing: border-box;
+            margin: 0em;
+            padding-block: 1px;
+            padding-inline: 6px;
+            border: 2px outset buttonborder;
+        }
+    </style>
 </head>
 <body>
     <img id='background_img' src="{% static 'images/background.jpg' %}"></img>
