--- a/praca_inz/main/templates/main/main_page.html
+++ b/praca_inz/main/templates/main/main_page.html
@@ -7,6 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <title>Aleksandra Ciura</title>
+    <style>
+        input[type="file"] {
+            display: none;
+        }
+        button, label {
+            height: 6vh !important;
+            background-color: #202020;
+            color:  rgb(161, 161, 161);
+            border-radius: 5px;
+            display: inline-block;
+            text-align: center;
+            line-height: 6vh;
+            align-items: flex-start;
+            cursor: pointer;
+            box-sizing: border-box;
+            margin: 0em;
+            padding-block: 1px;
+            padding-inline: 6px;
+            border: 2px outset buttonborder;
+        }
+    </style>
 </head>
 <body>
     <image id='background_img' src="{% static 'images/background.jpg' %}"></image>
@@ -20,8 +41,9 @@
 
       <form id="upload-form" enctype="multipart/form-data" action="/recognition/" method="post">
             {% csrf_token %}
+            <label for="file">Wybierz plik</label>
             <input type="file" name="file" id="file" accept="image/*" required>
-            <button type="submit">Wyślij Zdjęcie</button>
+            <button type="submit" id="submit">Wyślij Zdjęcie</button>
       </form>
 
     </main>
