--- a/praca_inz/main/templates/main/predict_page.html
+++ b/praca_inz/main/templates/main/predict_page.html
@@ -40,55 +40,37 @@
         .image_wrapper {
             box-sizing: border-box; 
             width: calc(20% - 20px); 
-            margin: 10px;
+            margin: 0px;
             cursor: pointer;
             transition: transform 0.3s ease-in-out;
         }
+
         .image_wrapper img {
-            width: 100%; 
-            height: auto;
-            border-radius: 5px;
+            max-width: 100%; 
+            height: 100%;
         }
-        .image_wrapper img.fullscreen {
-            width: 100vw;
-            height: 100vh;
-            object-fit: contain;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background: rgba(0, 0, 0, 0.8); 
-            display: none;
-            z-index: 999;
-            pointer-events: none;
-        }
-
-        .overlay.active {
-            display: block;
-        }
-
-        .overlay .overlay_buttons {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            z-index: 1001;
-            display: none;
-        }
-
-        .overlay.active .overlay_buttons {
-            display: block;
-        }
-        #scale_input {
-            z-index: 1003;
-        }
+		
+		.image_wrapper.full{
+		width: 100vw;
+		height: 100vh;
+		background: #00000066;
+		position: fixed;
+		top: 0;
+		left:0;
+		}
+		
+		.actions{
+		display: none;
+		}
+		
+		.actions.show{
+		display: block;
+		
+		position: absolute;
+		top: 30px;
+		right: 30px;
+		}
+		
     </style>
 </head>
 <body>
@@ -100,23 +82,23 @@
     <main>
         <div id="image_container">
             {% for file_path in file_paths %}
-            <div class="image_wrapper" onclick="handleImageClick(event)">
-                <img src="{{ MEDIA_URL }}{{ file_path }}" onclick="openFullscreen(this)">
-                <div class="overlay">
-                    <div class="overlay_buttons">
-                        <p>Zamknij za pomocą klawisza Esc</p>
-                        <p>Pobierz obrazek naciskając d</p>
-                        <div id="scale_container">
-                            <label for="scale_input">Skala (jeden piksel to x milimetrów):</label>
-                            <input type="text" id="scale_input" placeholder="Wprowadź skalę" oninput="setScale()">
-                        </div>
-                        
-                        <div id="measurement_info">
-                            <p>Rozmiar fragmentu: <span id="measurement_size"></span> mm</p>
-                        </div>
+			
+			<div class="image_wrapper">
+				<img src="{{ MEDIA_URL }}{{ file_path }}" onclick="openFullscreen(this)">
+				<div class="actions">
+					<p>Zamknij za pomocą klawisza Esc</p>
+                    <p>Pobierz obrazek naciskając d</p>
+                    <p>Zresetuj pomiar naciskając r</p>
+                    <div id="scale">
+                        <label for="scaleInput">Skala (jeden piksel to x milimetrów):</label>
+                        <input type="text" id="scaleInput" placeholder="Wprowadź skalę" oninput="setScale()">
                     </div>
-                </div>
-            </div>
+
+                    <div id="measurementInfo">
+                        <p>Rozmiar fragmentu: <span id="measurementSize"></span> mm</p>
+                    </div>
+				</div>
+			</div>
         {% endfor %}
         </div>
         <div id="button_container">
